Send emails with redis background jobs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,26 @@
-NODE_ENV=dev
+APP_URL=
+NODE_ENV=
+PORT=
 
-PORT=3333
+# AUTH CONFIG
+SECRET=
+EXPIRES_IN=
+
+#REDIS
+
+REDIS_HOST=
+REDIS_PORT=
 
 # DATABASE
-DB_DIALECT=postgres
-DB_HOST=localhost
-DB_USERNAME=postgres
-DB_PASSWORD=docker
-DB_NAME=newapp
+DB_DIALECT=
+DB_HOST=
+DB_USERNAME=
+DB_PASSWORD=
+DB_NAME=
+
+# MAIL
+
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_PASS=
